# qrcode-wasm-bindgen

./: .gitignore  README.md  Readme.md
01-bindgen/: Cargo.toml  QrCodeRenderer.js  Readme.md  index.html
01-bindgen/src/: lib.rs
02-ffi/: Cargo.toml  QrCodeRenderer.js  Readme.md  build.sh
02-ffi/src/: lib.rs
03-bindgen-webworker/: QrCodeWebWorker.js  Readme.md  index.html
03-webworker-bindgen/: QrCodeRenderer.js  Readme.md
04-webworker-ffi/: QrCodeRenderer.js  QrCodeWebWorker.js  build.sh  index.html
05-bindgen-webworkers/: QrCodeRenderer.js  Readme.md
05-webworkers-bindgen/src/: lib.rs
06-ffi-webworkers/: Cargo.toml  Readme.md  index.html
06-webworkers-ffi/: QrCodeWebWorker.js
